Alignment fix

--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -1,5 +1,6 @@
 .experience-container{
-    margin: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     position: relative;
     padding-top: 90px;
     margin-bottom: 2rem;
@@ -8,7 +9,7 @@
 .experience-container h5{
     font-size: 1.5rem;
     font-weight: 600;
-    margin-bottom: 3rem;
+    padding-bottom: 3rem;
 }
 
 .left-arrow,
