--- a/src/components/Project/Projects.css
+++ b/src/components/Project/Projects.css
@@ -1,6 +1,7 @@
 .projects-wrapper {
     padding-top: 5.5rem;
-    margin: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .projects-title{
